# turbulucid

./: .buildinfo  .gitattributes  .gitignore  .travis.yml  MANIFEST.in  README.rst  condenv.yml  genindex.html  index.html  objects.inv  pyproject.toml  readthedocs.yml  search.html  searchindex.js  setup.py
_sources/code_reference/: case.rst.txt  data_extraction.rst.txt  plotting.rst.txt  readers.rst.txt
code_reference/: case.html  data_extraction.html  plotting.html  quantities.html  readers.html
docs/: conf.py  index.rst  legal.rst  user.rst
docs/code_reference/: case.rst  data_extraction.rst  index.rst  plotting.rst  quantities.rst  readers.rst
docs/tutorial/: turbulucid_tutorial.html  turbulucid_tutorial.ipynb
tests/core/: test_data_extraction.py  test_readers.py
tests/datasets/test_case_1/: averaged.vtm  averagingConfig  test_mesh.geo
turbulucid/: __init__.py  field_functions.py  legacy.py
turbulucid/channel_flow/: __init__.py  datasets.py  estimates.py
turbulucid/channel_flow/datasets/: channel_dns_lee_moser.hdf5  channel_jimenez.hdf5  channel_moser_kim_mansour.hdf5
turbulucid/core/: __init__.py  case.py  data_extraction.py  loading.py  plotting.py  quantities.py  readers.py
turbulucid/datasets/bfs/: bfs.vtm
turbulucid/datasets/test_case_block/: averaged.vtm
turbulucid/docs/: Makefile  conf.py  index.rst  make.bat
turbulucid/flows/: __init__.py
turbulucid/flows/bfs/: __init__.py  datasets.py
turbulucid/flows/channel_flow/: estimates.py
turbulucid/zpgtbl/: __init__.py  datasets.py  estimates.py  quantities.py
(+64 files in other folders)
